# liftcash

./: Cargo.toml  LIFT_DEPLOY.sh  PROMO_DEPLOY.sh  README.md  canister_ids.json  deploy.sh  dfx.json  package-lock.json  package.json  tsconfig.json
scripts/: PROMO_DEPLOY.sh  Test.sh  constants.sh  createuser.sh  deploy.sh  icrcledger.sh  init.sh  mint_new_tokens.sh  participate.sh  ratify.sh  remove.sh  survey.sh  vote.sh
src/Community_Backend/: Cargo.toml  Community_Backend.did
src/Community_Backend/src/: constants.rs  controller.rs  guards.rs  lib.rs  state.rs  types.rs  verifydecide.rs
src/Economy_Backend/: Cargo.toml  Economy_Backend.did
src/Economy_Backend/src/: conversion.rs  lib.rs  pointpool.rs  promo_pool.rs  reward_mechanism.rs  staking.rs  tokentransfer.rs  types.rs  unstaking.rs  user_records.rs
src/Lift_Cash_backend/: Cargo.toml  Lift_Cash_backend.did
src/Lift_Cash_backend/src/: lib.rs
src/Lift_Cash_frontend/: index.html  package.json  tailwind.config.js
src/Lift_Cash_frontend/public/: .ic-assets.json5
src/Lift_Cash_frontend/src/: App.jsx  auth.js  index.css  main.jsx
src/Lift_Cash_frontend/src/components/: AuthComponent.jsx  Header.jsx  Modal.css
src/Lift_Cash_frontend/src/hooks/:  useConvertToMinutes.js  useFormattedTimeLeft.js
src/Lift_Cash_frontend/src/pages/: LandingPage.jsx  LoginPage.jsx
src/Lift_Cash_frontend/src/sections/: AboutSection.jsx  HeroSection.jsx
src/Lift_Cash_frontend/src/utils/: useAuthClient.jsx
src/User_Backend/: Cargo.toml
src/User_Backend/src/: lib.rs
tests/: createuser.sh  remove.sh
(+92 files in other folders)
