[package]
name = "Community_Backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
ic-cdk-macros = "0.16.0"
ic-stable-structures = "0.6.5"
sha2 = "0.9"
lazy_static = "1.4.0"
futures = "0.3.31"
kaires = { git = "https://github.com/wantedbear007/kaires", rev = "f9e6ce3c67be26d1fed8f5a84a71eaec0ecf97e1" }
ic-verifiable-credentials = "1.0.1"
getrandom = { version = "0.2.15", default-features = false, features = ["custom"] }
