[package]
name = "Economy_Backend"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]


[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
serde_derive = "1.0"
ic-cdk-macros = "0.16.0"
ic_principal="0.1.1" 
sha2 = "0.9"
ic-stable-structures = "0.6.5"
lazy_static = "1.4.0"
decode = "0.0.0"
rust_decimal = "1.26"